2007-01-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/RemoteControlBoard.cpp: began
	changes in order to better allow controlboards to be
	queried in human-readable form.

	* src/libYARP_dev/include/yarp/dev/DeviceDriver.h: began
	support for human-readable device usage queries.

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: added
	suppressed-reply operation, so that if a connection to an
	RPC port does not actually care about a reply, that reply
	is not sent.

2007-01-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/RemoteControlBoard.cpp: make sure
	velocity interface can be used independently of position
	interface.

2007-01-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/HttpCarrier.cpp: support for "post" form
	of http messages.

2007-01-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp,PortCoreInputUnit.cpp: try to
	deal with newest ACE not using -1 anymore for string methods.
	(Motivation: running YARP on MAC OSX on intel processors requires
	recent ACE beta).

2007-01-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/FallbackNameClient.cpp,Companion.cpp:
	called name server entry "/root" instead of "root" now that
	it is a real port.

2007-01-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: Made connections
	reversible, so that an input connection can switch to 
	become an output connection.  This is helpful for communication
	with non-YARP processes, where a connection to read data is
	initiated externally.

	* README: Updated compile/install instructions.

2007-01-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/HttpCarrier.h: Made basic port 
	properties visible to http connections (e.g. from web browser)

	* src/libYARP_OS/include/yarp/NameserCarrier.h: Made name server
	protocol a protocol supported at the port level.
